--- a/POS/build.xml
+++ b/POS/build.xml
@@ -156,8 +156,14 @@
 	</target>
 
 	<!-- Run .jar file created with 'dist'  -->
-	<target name="jrun" description="Run .jar file created with 'dist'">
+	<target name="jrun" depends="dist-revision" description="Run .jar file created with 'dist'">
 		<java jar="${dist.dir}/Unum_Quadrigis.jar" fork="true" />
+	</target>
+	
+	<target name="runc" depends="build" description="Run the application (console)">
+		<java classname="ee.ut.math.tvt.unum_quadrigis.Intro" classpathref="test.classpath" fork="yes">
+			<arg value="console" />
+		</java>
 	</target>
 
 </project>
