--- a/POS/build.xml
+++ b/POS/build.xml
@@ -34,7 +34,10 @@
 
 	<!-- Run the application -->
 	<target name="run" depends="build" description="Run the application">
-		<java classname="ee.ut.math.tvt.unum_quadrigis.Intro" classpathref="test.classpath" fork="yes" />
+		<java classname="ee.ut.math.tvt.unum_quadrigis.Intro" classpathref="test.classpath" fork="yes">
+			<jvmarg value="-Xdebug" />
+			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" />
+		</java>
 	</target>
 
 	<!-- Build the system -->
@@ -159,12 +162,27 @@
 	<target name="jrun" depends="dist-revision" description="Run .jar file created with 'dist'">
 		<java jar="${dist.dir}/Unum_Quadrigis.jar" fork="true" />
 	</target>
-	
+
 	<target name="runc" depends="build" description="Run the application (console)">
 		<java classname="ee.ut.math.tvt.unum_quadrigis.Intro" classpathref="test.classpath" fork="yes">
 			<arg value="console" />
 		</java>
 	</target>
+	<target name="git_commit" description="add, commit, push">
+		<input message="Tag message: " addproperty="git.tag.message" />
+		<exec executable="git">
+			<arg value="add" />
+			<arg value="-A" />
+		</exec>
+		<exec executable="git">
+			<arg value="commit" />
+			<arg value="-m" />
+			<arg value="${git.tag.message}" />
+		</exec>
+		<!--	<exec executable="git">
+			<arg value="push" />
+		</exec>-->
 
+	</target>
 </project>
 
