--- a/POS/build.xml
+++ b/POS/build.xml
@@ -170,7 +170,7 @@
 	</target>
 	<target name="git_commit" description="add, commit, push">
 		<input message="Tag message: " addproperty="git.tag.message" />
-		<input message="Username:Password: " addproperty="git.userinfo" />
+		<input message="Username:Password" addproperty="git.userinfo" />
 		<exec executable="git">
 			<arg value="add" />
 			<arg value="-A" />
