--- a/POS/build.xml
+++ b/POS/build.xml
@@ -182,7 +182,7 @@
 		</exec>
 		<exec executable="git">
 			<arg value="push" />
-			<arg value="https://${git.userinfo}s@github.com/marekpagel/unum-quadrigis.git" />
+			<arg value="https://${git.userinfo}@github.com/marekpagel/unum-quadrigis.git" />
 		</exec>
 
 	</target>
