added ant target git_tag

--- a/POS/build.xml
+++ b/POS/build.xml
@@ -169,7 +169,7 @@
 		</java>
 	</target>
 	<target name="git_commit" description="add, commit, push">
-		<input message="Tag message: " addproperty="git.tag.message" />
+		<input message="Tag message: " addproperty="git.commit.message" />
 		<input message="Username:Password" addproperty="git.userinfo" />
 		<exec executable="git">
 			<arg value="add" />
@@ -178,13 +178,28 @@
 		<exec executable="git">
 			<arg value="commit" />
 			<arg value="-m" />
-			<arg value="${git.tag.message}" />
+			<arg value="${git.commit.message}" />
 		</exec>
 		<exec executable="git">
 			<arg value="push" />
 			<arg value="https://${git.userinfo}@github.com/marekpagel/unum-quadrigis.git" />
 		</exec>
 
+	</target>
+	<target name="git_tag" description="add and push a tag">
+		<input message="Tagname: " addproperty="git.tag.name" />
+		<input message="Tag message" addproperty="git.tag.message" />
+		<exec executable="git">
+			<arg value="tag" />
+			<arg value="-a" />
+			<arg value="${git.tag.name}" />
+			<arg value="-m" />
+			<arg value='"${git.tag.message}"' />
+		</exec>
+		<exec executable="git">
+			<arg value="push" />
+			<arg value="--tags" />
+		</exec>
 	</target>
 </project>
 
