Pull test with git_commit target

--- a/POS/build.xml
+++ b/POS/build.xml
@@ -181,7 +181,7 @@
 			<arg value="${git.commit.message}" />
 		</exec>
 		<exec executable="git">
-			<aeg value="pull" />
+			<arg value="pull" />
 		</exec>
 		<exec executable="git">
 			<arg value="push" />
