--- a/POS/build.xml
+++ b/POS/build.xml
@@ -12,6 +12,7 @@
 	<property name="doc.dir" value="${build.dir}/doc" />
 	<property name="test.reports.dir" value="${build.dir}/reports/" />
 	<property name="lib.dir" value="${basedir}/lib"/>
+	<property name="conf.dir" value="${basedir}/conf"/>
 	
 	<!-- database variables -->
 	<property name="data.dir"	value="${basedir}/data"/>
