--- a/POS/build.xml
+++ b/POS/build.xml
@@ -6,6 +6,7 @@
 	<property file="build.properties" />
 	<property name="build.dir" value="${basedir}/build" />
 	<property name="build.classes.dir" value="${build.dir}/classes" />
+	<property name="build.test.dir"       value="${build.dir}/test"/>
 	<property name="src.dir" value="${basedir}/src" />
 	<property name="prop.dir" value="${basedir}/prop" />
 	<property name="dist.dir" value="${build.dir}/jar" />
@@ -20,6 +21,11 @@
 	<property name="db.alias"	value="POS"/>
 	<property name="db.url" 	value="jdbc:hsqldb:hsql://localhost/POS"/>
 	<property name="lib.hibernate.dir"   value="${lib.dir}/hibernate"/>
+	
+	<!-- Source -->
+	<property name="src.dir"    value="${basedir}/src"/>
+	<property name="test.dir"   value="${basedir}/test"/>
+
 	
 	<!-- Definitions of classpath variants used for different tasks -->
 
@@ -46,6 +52,21 @@
 	        </fileset>
 	</path>
 
+	<path id="test-classpath">
+		<fileset dir="${lib.dir}">
+			<include name="*.jar"/>
+		</fileset>
+	    <pathelement path="${build.classes.dir}/" />
+		<pathelement path="${build.test.dir}/" />
+	</path>
+	
+	<path id="libs">
+		<fileset dir="${lib.dir}">
+			<include name="*.jar"/>
+		</fileset>
+	</path>
+	
+	
 	<!-- Definitions of runnable ant targets.
          Run them from the command line by executing "ant [targetname]"  -->
 
@@ -241,5 +262,37 @@
 	        </java>
 	</target>
 
+	<target name="build-tests" depends="build" description="Build the system">
+			<javac
+	            srcdir="${test.dir}"
+	            destdir="${build.test.dir}"
+	            debug="true"
+	            debuglevel="lines,vars,source"
+	            encoding="utf-8"
+	            compiler="modern"
+	            target="1.5"
+	            source="1.5"
+	        	classpathref="libs"
+	        >
+				<classpath>
+					<pathelement path="${build.classes.dir}" />
+				</classpath>
+			</javac>
+		</target>
+	
+	<target name="test" depends="build-tests" description="Run the template application">
+
+			<junit>
+				<classpath refid="test-classpath" />
+
+				<formatter type="brief" usefile="false" />
+				<batchtest>
+					<fileset dir="${build.test.dir}" includes="**/*.class" />
+				</batchtest>
+			</junit>
+
+
+		</target>
+	
 </project>
 
