--- a/POS/.classpath
+++ b/POS/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="lib/jgoodies-common-1.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
